# authentication_tui

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  build.rs
docker/tui_backend/: docker-compose.yaml
src/: action.rs  app.rs  cli.rs  client.rs  config.rs  error.rs  errors.rs  event.rs  handler.rs  lib.rs  main.rs  prelude.rs  proto.rs  terminal.rs  tracing.rs  tui.rs  ui.rs
src/components/: backend.rs  component.rs  container.rs  footer.rs  fps.rs  home.rs  mod.rs  toast.rs
src/config/: app.rs  backend.rs  mod.rs  tui.rs
src/controllers/: mod.rs  update_backend_status.rs
src/custom_widgets/: fps.rs  mod.rs  status.rs  toast.rs
src/domain/: action.rs  app_modes.rs  backend_status.rs  event.rs  mod.rs  toast.rs
src/handlers/: action.rs  actions.rs  crossterm.rs  event.rs  key_events.rs  keys.rs  mod.rs  render.rs  tick.rs  update.rs
src/rpc/: authentication.rs  client.rs  mod.rs  ping.rs  proto.rs
src/services/: mod.rs  utilities.rs
src/state/: app.rs  backend.rs  mod.rs  popup.rs  toast.rs
src/states/: app.rs  backend.rs  mod.rs  toast.rs
src/ui/: component.rs  container.rs  footer.rs  fps.rs  helpers.rs  layout.rs  mod.rs  render.rs  toast.rs
src/ui/components/: container_component.rs  home_component.rs  mod.rs
src/ui/custom_widgets/: footer_status.rs  mod.rs  statistics.rs  status.rs  status_app_mode.rs  toast.rs
