[package]
name = "authentication_tui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/IanTeda/authentication_tui"
description = "A TUI application front end for the Authentication Mircorsevice"
keywords = ["authentication", "tui", "ratatui", "tonic client"]

[dependencies]
