[package]
name = "authentication_tui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/IanTeda/authentication_tui"
description = "A TUI application front end for the Authentication Mircorsevice"
keywords = ["authentication", "tui", "ratatui", "tonic client"]

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.17", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", default-features = false, features = [
    "serde",
    "event-stream",
] }
directories = "5.0.1"
futures = "0.3.30"
libc = "0.2.158"
pretty_assertions = "1.4.0"
prost = "0.13.2"
ratatui = { version = "0.28.1", features = ["serde", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
strip-ansi-escapes = "0.2.0"
strum = "0.26.3"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.8.19"
tonic = { version = "0.12.0", features = ["prost"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }

[build-dependencies]
anyhow = "1.0.88"
tonic-build = { version = "0.12", features = ["prost"] }
vergen-gix = { version = "1.0.1", features = ["build", "cargo"] }

[dev-dependencies]
fake = { version = "2.9.2", features =["http"]}
rand = "0.8.5"
